--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="responsive-navbar" id="responsivenavlinks">
                     <div class="responsive-header">
-                        <img src="/../images/enlarged-pic.png" width="100px" alt="">
+                        <img src="../images/enlarged-pic.png" width="100px" alt="">
                         <button id="cancelButton">&times;</button>
                     </div>
                     <div class="responsive-navlinks">
@@ -131,9 +131,9 @@
             <div class="socials">
                 <h2>Follow</h2>
                 <ul>
-                    <li><a href=""><img src="/../images/ig.svg" width="30px" alt="instagram"></a></li>
-                    <li><a href=""><img src="/../images/yt.svg" alt="youtube" width="30px"></a></li>
-                    <li><a href=""><img src="/../images/snap.svg" alt="snapchat" width="30px"></a></li>
+                    <li><a href=""><img src="../images/ig.svg" width="30px" alt="instagram"></a></li>
+                    <li><a href=""><img src="../images/yt.svg" alt="youtube" width="30px"></a></li>
+                    <li><a href=""><img src="../images/snap.svg" alt="snapchat" width="30px"></a></li>
                    
                 </ul>
             </div>
@@ -142,5 +142,5 @@
     </div>
     
 </body>
-<script src="/js/main.js"></script>
+<script src="js/main.js"></script>
 </html>
