--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     EXPLORE OUR STORIES
                 </h2>
             </div>
-            <div class="./images">
+            <div class="images">
               <div class="row">
                 <div class="feature">
                     <img src="./images/dark.jpg" alt="">
