--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
             <div class="socials">
                 <h2>Follow</h2>
                 <ul>
-                    <li><a href=""><img src="/./images/ig.svg" width="30px" alt="instagram"></a></li>
-                    <li><a href=""><img src="/./images/yt.svg" alt="youtube" width="30px"></a></li>
-                    <li><a href=""><img src="/./images/snap.svg" alt="snapchat" width="30px"></a></li>
+                    <li><a href=""><img src="./images/ig.svg" width="30px" alt="instagram"></a></li>
+                    <li><a href=""><img src="./images/yt.svg" alt="youtube" width="30px"></a></li>
+                    <li><a href=""><img src="./images/snap.svg" alt="snapchat" width="30px"></a></li>
                 </ul>
             </div>
         </footer>
