--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 </div>
                 <div class="responsive-navbar" id="responsivenavlinks">
                     <div class="responsive-header">
-                        <img src="/./images/enlarged-pic.png" width="100px" alt="">
-                        <button id="cancelButton">&times;</button>
+                        <img src="./images/enlarged-pic.png" width="100px" alt="">
+                        <button id="cancelButton" style="color:black;">&times;</button>
                     </div>
                     <div class="responsive-navlinks">
                         <ul>
